Security issue in installator fixed

--- a/macosx/indi2indigo/Install INDI Drivers/Install INDI Drivers.entitlements
+++ b/macosx/indi2indigo/Install INDI Drivers/Install INDI Drivers.entitlements
@@ -3,14 +3,10 @@
 <plist version="1.0">
 <dict>
 	<key>com.apple.security.app-sandbox</key>
-	<true/>
+	<false/>
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>$(TeamIdentifierPrefix)INDIGO</string>
-	</array>
-	<key>com.apple.security.temporary-exception.files.home-relative-path.read-only</key>
-	<array>
-		<string>/Library/Group Containers/AG8BXW65A2.INDIGO/</string>
 	</array>
 </dict>
 </plist>
